--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ reqwest = "0.12.4"
 teloxide = { version = "0.12", features = ["macros"] }
 log = "0.4"
 pretty_env_logger = "0.5"
-tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 once_cell = "1.19.0"
+rand = "0.8.5"
