--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ pretty_env_logger = "0.5"
 tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 once_cell = "1.19.0"
 rand = "0.8.5"
+serde = "1.0.199"
