--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
 once_cell = "1.19.0"
 rand = "0.8.5"
 serde = "1.0.199"
+serde_json = "1.0.116"
