--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,8 @@
-[package]
-name = "telegram_bot"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [ "rebebot_core",
+    "telegram_bot",
+    "translation_gui",
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-html2text = "0.12.4"
-reqwest = "0.12.4"
-teloxide = { version = "0.12", features = ["macros"] }
-log = "0.4"
-pretty_env_logger = "0.5"
-tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
-once_cell = "1.19.0"
-rand = "0.8.5"
-serde = "1.0.199"
-serde_json = "1.0.116"
+package.rust-version = "1.77.2"
+resolver = "2"
